<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_tulo_de_la_novela"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/text_view_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor_"
            android:textSize="16sp"
            android:textColor="@color/teal_700"
            android:layout_marginTop="4dp" />

        <ImageView
            android:id="@+id/image_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:contentDescription="@string/favorite_updated" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/purple_700" />

            <Button
                android:id="@+id/button_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_novel"
                android:textColor="@color/white"
                android:backgroundTint="@color/teal_700"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

